--- a/OrderByKiosk/OrderByKiosk/OrderByKiosk.csproj
+++ b/OrderByKiosk/OrderByKiosk/OrderByKiosk.csproj
@@ -48,6 +48,12 @@
   <ItemGroup>
     <Compile Include="Draw\BtnClass.cs" />
     <Compile Include="Draw\BtnSet.cs" />
+    <Compile Include="Draw\ComboClass.cs" />
+    <Compile Include="Draw\ComboSet.cs" />
+    <Compile Include="Draw\LvClass.cs" />
+    <Compile Include="Draw\LvSet.cs" />
+    <Compile Include="Draw\PanelClass.cs" />
+    <Compile Include="Draw\PanelSet.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
