--- a/OrderByKiosk/OrderByKiosk/OrderByKiosk.csproj
+++ b/OrderByKiosk/OrderByKiosk/OrderByKiosk.csproj
@@ -48,10 +48,11 @@
   <ItemGroup>
     <Compile Include="Draw\BtnClass.cs" />
     <Compile Include="Draw\BtnSet.cs" />
-	<Compile Include="Draw\CheckBoxClass.cs" />
+    <Compile Include="Draw\CheckBoxClass.cs" />
     <Compile Include="Draw\CheckBoxSet.cs" />
+    <Compile Include="Draw\TxtboxClass.cs" />
     <Compile Include="Draw\TxtboxSet.cs" />
-	<Compile Include="Draw\ComboClass.cs" />
+    <Compile Include="Draw\ComboClass.cs" />
     <Compile Include="Draw\ComboSet.cs" />
     <Compile Include="Draw\LvClass.cs" />
     <Compile Include="Draw\LvSet.cs" />
